--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="frontpage">
             <div class="img"><img src="Frontpage img.jpg" alt=""></div>
             
-            <div class="btn"> <a href="2nd Page/page2.html">Here For A Surprise</a> </div>
+            <div class="btn"> <a href="page2.html">Here For A Surprise</a> </div>
 
             <!-- simple surprise container -->
             <div class="surprise-area" aria-hidden="true"></div>
