--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="video">
-        <video src="../Video.mp4" type="video/mp4" controls loop></video>
+        <video src="Video.mp4" type="video/mp4" controls loop></video>
     </div>
     
 </body>
